Fixed saved-messages component. * Error message now also auto disappears. * Made error message background red (with white font). * Moved the scroll to top/bottom arrows z-index of 999 instead of 9999999. As we want to have the saving message appear on top of it.

--- a/themes/dark/assets/css/style.css
+++ b/themes/dark/assets/css/style.css
@@ -4342,7 +4342,7 @@ CSS helper classes
     overflow: hidden;
     text-align: center;
     font-size: 20px;
-    z-index: 50;
+    z-index: 999;
     background-color: #777;
     color: #eee;
     width: 50px;
